--- a/index26.html
+++ b/index26.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> New Year</title>
-    <link rel="stylesheet" href="index17.css">
+    <link rel="stylesheet" href="style17.css">
 </head>
 
 <body>
